# geopolitical-dashboard

./: .env.example  .gitignore  README.md  app.py  dashboard.twbx  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: db.py  queries.py  utils.py
data/raw/acled/: US-and-Canada_aggregated_data_up_to-2026-02-14.csv  US-and-Canada_aggregated_data_up_to-2026-02-14.xlsx  number_of_demonstration_events_by_country-year_as-of-20Feb2026.csv  number_of_demonstration_events_by_country-year_as-of-20Feb2026.xlsx  (+6 more)
data/seeds/: acled_manual_weekly_backfill_2026_jan_feb.csv  diplomatic_events_seed.csv
docs/: acled-data-description.md  dashboard-step-by-step.ko.md  deep-research-report.ko.md  deep-research-report.md  domain-information.md  todo.md
pages/: 01_overview.py  02_incidents.py  03_diplomatic.py  04_risk_score.py
pipeline/: config.py  db.py
pipeline/extractors/: acled.py  acled_manual.py  base.py  gdelt.py  ofac_sdn.py  seed_events.py  ucdp_ged.py  world_bank.py
pipeline/loaders/: duckdb_loader.py
pipeline/transformers/: acled.py  acled_manual.py  gdelt.py  ofac_sdn.py  seed_events.py  ucdp_ged.py  world_bank.py
pipeline/utils/: id_gen.py  iso3.py  logging_config.py  retry.py
scripts/: backfill_regions.py  bootstrap_db.py  run_pipeline.py  seed_dimensions.py
sql/queries/: risk_score.sql  validation.sql
sql/schema/: 00_dimensions.sql  01_facts.sql  02_aggregates.sql
tests/test_extractors/: test_acled_extractor.py  test_gdelt_extractor.py
tests/test_scripts/: test_run_pipeline.py
tests/test_transformers/: test_acled_transformer.py
(+17 files in other folders)
