[project]
name = "geopolitical-dashboard"
version = "0.1.0"
description = "ETL pipeline and DuckDB warehouse for geopolitical dashboarding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "pycountry>=23.12.11",
    "gdeltdoc>=1.12.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]
